--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attendly - Attendance Tracking</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -14,7 +15,7 @@
     <main>
       <section>
         <h2>Add Student</h2>
-        <form>
+        <form class="add-student-form">
           <input
             type="text"
             id="student-name"
