--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Attendly - Attendance Tracking</title>
+    <title>Collaborative GitHub</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -35,7 +35,11 @@
         <ul id="students-list">
           <!-- Student list will be displayed here -->
         </ul>
+        <button id="clear-students-btn" type="button">
+          Clear All Students
+        </button>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
